--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "components/body/Cards.jsx", "app/(tabs)/index.jsx", "app/(tabs)/settings.jsx", "app/(tabs)/_layout.jsx", "app/_layout.jsx"  ]
 }
